--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Navbar Section-->
     <nav class="navbar">
         <div class="navbar__container">
             <!--Ideally use an image instead-->
@@ -24,11 +28,109 @@
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">Tech</a>
                 </li>
+                <li class="navbar__item">
+                    <a href="/tech.html" class="navbar__links">Products</a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="/tech.html" class="button">Sign Up</a>
+                </li>
             </ul>
         </div>
 
     </nav>
 
-    <h1>Hello World</h1>
+    <!--Hero Section-->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>NEXT GENERATION</h1>
+                <h2>TECHNOLOGY</h2>
+                <p>See what makes us different.</p>
+                <button class="main__btn"><a href="/">Get Started</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="images/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+
+    <!--Services Sections-->
+    <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="shrink services__card">
+                <h2>Experience Bliss</h2>
+                <p>AI Powered Technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are You Ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
+
+    <!--Footer section-->
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="">How it works</a>
+                    <a href="">Testimonials</a>
+                    <a href="">Careers</a>
+                    <a href="">Investments</a>
+                    <a href="">Terms of Service</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Contact Us</h2>
+                    <a href="">Contact</a>
+                    <a href="">Support</a>
+                    <a href="">Destinations</a>
+                    <a href="">Sponsorships</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>Videos</h2>
+                    <a href="">How it works</a>
+                    <a href="">Testimonials</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Social Media</h2>
+                    <a href="">How it works</a>
+                    <a href="">Testimonials</a>
+                    <a href="">Careers</a>
+                    <a href="">Investments</a>
+                    <a href="">Terms of Service</a>
+                </div>
+            </div>
+        </div>
+        <div class="social__media">
+            <div class="social__media--wrap">
+                <div class="footer__logo">
+                    <a href="" id="footer__logo"><i class="fas faa-gem"></i>NEXT</a>
+                </div>
+                <p class="website__right">NEXT 2020. All rights reserved</p>
+                <div class="social___icons">
+                    <a href="/" class="social__icon--link" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="/" class="social__icon--link"
+                    target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="/" class="social__icon--link"
+                    target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
+
 </body>
 </html>
